vlib/v/checker/tests/assign_type_mismatch_with_generics_err.out
vlib/v/checker/tests/assign_type_mismatch_with_generics_err.vv:10:26: notice: unused parameter: `arg`
    8 | struct Bar {}
    9 | 
   10 | fn (mut f Foo[T]) method(arg T) {
      |                          ~~~
   11 |     mut b := false
   12 |     if f.f != none {
vlib/v/checker/tests/assign_type_mismatch_with_generics_err.vv:13:9: error: cannot assign to `b`: expected `bool`, not `fn (Bar) bool`
   11 |     mut b := false
   12 |     if f.f != none {
   13 |         b = f.f or { panic(err) }
      |               ^
   14 |     } else {
   15 |         b = true
